<resources>
    <string name="app_name">Step Forward</string>
    <string name="Welcome">Добро Пожаловать!</string>
    <string name="EnterSubNumberAndName">введите номер абонемента и ваше имя</string>
    <string name="SubNum">номер абонемента</string>
    <string name="Name">Имя</string>
    <string name="surName">Фамилия</string>
    <string name="secondName">Фамилия</string>
    <string name="bithday">Дата рождения</string>
    <string name="youName">Ваше имя</string>
    <string name="Sign">Войти</string>
    <string name="notification">Настройка уведомлений</string>
    <string name="On">Включить</string>
    <string name="Off">Выключить</string>
    <string name="language">Настройка языка</string>
    <string name="languageRU">Русский</string>
    <string name="languageEN">Английский</string>
    <string name="save">Сохранить</string>

    <string name="telephone">ЕДИНЫЙ ТЕЛЕФОН:\n+7(3439)38-99-22</string>
    <string name="telephonWatsap">+7(902)503-03-94</string>

    <string name="sinara">СИНАРСКИЙ РАЙОН\nул.Мичурина 34|2 этаж\nпн-пт 12.00-21.00\nсб-вс выходной</string>
    <string name="south">МИКРОРАЙОН ЮЖНЫЙ\nбульвар комсомольский 48\nпн-пт 12.00-21.00\nсб-вс выходной</string>

    <string name="MakeTrial">Записаться на пробное занятие</string>
    <string name="StyleAndDirection">Стили и направления</string>
    <string name="StyleDance">ТАНЦЕВАЛЬНЫЕ НАПРАВЛЕНИЯ: </string>
    <string name="MasterClass">ПРОЙДЕННЫЕ МАСТЕР-КЛАССЫ</string>
    <string name="Achievements">ДОСТИЖЕНИЯ</string>
    <string name="All">Все</string>
    <string name="Teacher">Преподаватели</string>
    <string name="RecordTrialLesson">Записаться на пробное занятие</string>
    <string name="RecordFreeTrialLesson">Записаться на бесплатное занятие</string>
    <string name="WhyWe">почему мы</string>
    <string name="WhyWeModern">8 современных танцевальных залов</string>
    <string name="WhyWeProf">Проффесиональные и опотные педагоги</string>
    <string name="WhyWeDirection">Более 15 направлений для детей и взрослых</string>
    <string name="WhyWeBigScene">Каждый ученик выступает на большой сцене</string>
    <string name="ClubCarts">КЛУБНЫЕ КАРТЫ</string>
    <string name="ClubCart">клубная карта</string>
    <string name="Feedback">Обратная связь</string>
    <string name="WeNetwork">Мы в соц сетях</string>
    <string name="menu_add_user">Добавить пользователя</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_teacher">Преподаватель</string>
    <string name="menu_notification">Уведомления</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_calendar">Календарь занятий</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="menu_logout">Выход</string>
    <string name="abonement">Абонемент</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_RecoverPassword">Востановить пароль</string>

    <string name="action_sign_in">Войдите</string>
    <string name="action_sign_in_short">Войдите</string>
    <string name="invalid_username">Не валидный абонимент</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Не удалось войти"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string-array name="dance_directions">
        <item>Современные</item>
        <item>Хип-Хоп</item>
        <item>Бальные</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>