<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stepforward.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_teacherAndDetailsFragment"
            app:destination="@id/teacherAndDetailsFragment" />
        <action
            android:id="@+id/action_nav_home_to_freeLessonFragment"
            app:destination="@id/freeLessonFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.stepforward.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_teacher"
        android:name="com.example.stepforward.ui.teacher.TeacherFragment"
        android:label="@string/menu_teacher"
        tools:layout="@layout/fragment_teacher" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.stepforward.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"/>
    <fragment
        android:id="@+id/nav_feedback"
        android:label="@string/menu_feedback"
        android:name="com.example.stepforward.ui.feedback.FeedBackFragment"/>
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.stepforward.ui.setting.SettingFragment"
        android:label="SettingFragment" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.stepforward.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notification" />
    <fragment
        android:id="@+id/teacherAndDetailsFragment"
        android:name="com.example.stepforward.ui.teacher.TeacherAndDetailsFragment"
        android:label="@string/menu_teacher"
        tools:layout="@layout/fragment_teacher_and_details" >
        <action
            android:id="@+id/action_teacherAndDetailsFragment_to_profileEditFragment"
            app:destination="@id/profileEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.example.stepforward.ui.profile.ProfileEditFragment"
        android:label="@string/menu_profile" />
    <fragment
        android:id="@+id/nav_add_user"
        android:name="com.example.stepforward.ui.addUser.AddUserFragment"
        android:label="fragment_add_user"
        tools:layout="@layout/fragment_add_user" />
    <fragment
        android:id="@+id/freeLessonFragment"
        android:name="com.example.stepforward.ui.home.FreeLessonFragment"
        android:label="fragment_free_lesson"
        tools:layout="@layout/fragment_free_lesson" />
</navigation>